--- a/public/pubs/index.html
+++ b/public/pubs/index.html
@@ -144,10 +144,13 @@
 <h4 id="software">Software</h4>
 <ul>
 <li>
-<p><a href="https://pypi.org/project/asreview/"><code>asreview</code></a> in Python: Active learning for Systematic Reviews <a href="https://doi.org/10.5281/zenodo.3345592"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3345592.svg" alt="DOI"></a></p>
+<p><code>asreview</code> ASReview: Active learning for systematic reviews <a href="https://doi.org/10.5281/zenodo.3345592"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3345592.svg" alt="DOI"></a></p>
 <ul>
 <li><a href="https://asreview.readthedocs.io">User guide</a> &amp; <a href="https://github.com/asreview/asreview">source code</a>.</li>
 </ul>
+</li>
+<li>
+<p><code>asreview-wordcloud</code> Wordclouds: A tool to create a visual impression of the verbal content within a systematic review dataset <a href="https://doi.org/10.5281/zenodo.4672241"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.4672241.svg" alt="DOI"></a></p>
 </li>
 </ul>
 
