--- a/public/pubs/index.html
+++ b/public/pubs/index.html
@@ -146,11 +146,15 @@
 <li>
 <p><code>asreview</code> ASReview: Active learning for systematic reviews <a href="https://doi.org/10.5281/zenodo.3345592"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3345592.svg" alt="DOI"></a></p>
 <ul>
-<li><a href="https://asreview.readthedocs.io">User guide</a> &amp; <a href="https://github.com/asreview/asreview">source code</a>.</li>
+<li>ASReview Software Documentation <a href="https://doi.org/10.5281/zenodo.4287119"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3345592.svg" alt="DOI"></a></li>
+<li><a href="https://github.com/asreview/asreview">GitHub source code</a></li>
 </ul>
 </li>
 <li>
 <p><code>asreview-wordcloud</code> Wordclouds: A tool to create a visual impression of the verbal content within a systematic review dataset <a href="https://doi.org/10.5281/zenodo.4672241"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.4672241.svg" alt="DOI"></a></p>
+<ul>
+<li><a href="https://github.com/asreview/asreview-wordcloud">GitHub source code</a></li>
+</ul>
 </li>
 </ul>
 
